<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".DetailsActivity">

    <ImageView
        android:id="@+id/image_user"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_username"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_username"
        app:layout_constraintStart_toEndOf="@+id/image_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/username"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/username"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/avatar"
        android:text="@string/txt_company"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_user"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/tab_follow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_follow"
        android:layout_marginTop="230dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.viewpager.widget.ViewPager>

    <ImageView
        android:id="@+id/btn_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/ic_star_blue_24dp"
        android:contentDescription="@string/btn_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_followers"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_user"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/tv_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:text="@string/txt_followers"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:text="@string/txt_following"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/following"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_following"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_follower"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/company" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_location"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_user"
        app:layout_constraintTop_toBottomOf="@+id/company" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_follow"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/company"
        app:layout_constraintTop_toBottomOf="@+id/username" />

</androidx.constraintlayout.widget.ConstraintLayout>